--- a/settings/config.json
+++ b/settings/config.json
@@ -1,11 +1,11 @@
 {
-	"ownername":"ZeeoneOfc",
-	"ownernumber":"62887435047326",
-	"botname":"Haruka-Bot",
+	"ownername":"dhani",
+	"ownernumber":"6283112170548",
+	"botname":"Rush-Bot",
 	"thumbnail":"./settings/haruka.jpg",
 	"background":"https://telegra.ph/file/d4c05638fa7886a1d8060.jpg",
 	"limit": {
-		"free":20,
+		"free":25,
 		"premium":1000
 	},
 	"session_name":"./session.json"
